# GrandPy

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
GrandPy/: __init__.py  analysis_tool.py  diffexp.py  grandPy.py  load.py  modeling.py  plot.py  processing.py  utils.py
GrandPy/data/: sars_R.tsv
GrandPy/test/: diffexp_test.py  load_test.py  modeling_test.py
GrandPy/test-datasets/: test_dense.experimentalDesign.tsv  test_dense.strandness.tsv  test_sc_dense.param  test_sc_dense.reads.subreads.tsv  test_sparse.reads.subreads.tsv
GrandPy/vignettes/: vignette_01_differential_expression_(snapshot_data).ipynb  vignette_02_kinetic_modeling_(progressive_labeling_time_courses).ipynb
Py/: Problem.ipynb  Probleme.ipynb  analysis_manager.py  analysis_tool.py  diffexp.py  gittestfile  grandPy.py  grandPy_test.py  load.py  modeling.py  plot.py  plot_manager.py  plot_tool.py  processing.py  slot_manager.py  slot_tool.py  test.py  utils.py
Py/test/: diffexp_test.py  grandPy_test.py  load_test.py  modeling_test.py  plot_test.py
Py/test-datasets/: test_dense.model.parameters.tsv  test_sc.param  test_sc.runtime  test_sc_dense.runtime  test_sc_sparse.strandness.tsv  test_sparse.param  test_sparse.reads.lengths.tsv  test_sparse.runtime
Py/turorials/: .gitignore
Py/vignettes/: vignette_00_getting_started.ipynb  vignette_01_differential_expression_(snapshot_data).ipynb  vignette_01_loading_data.py  vignette_01_loading_data_and_working_with_grandPy_objects.ipynb  vignette_02_kinetic_modeling_(progressive_labeling_time_courses).ipynb  vignette_03_loading_data_and_working_with_grandPy_objects.ipynb
docs/: LICENSE.md  index.md
docs/api/: analysis_tool.md  core_grandpy.md  diffexp.md  grandPy.md  lfc.md  load.md  modeling.md  plot.md  plot_tool.md  processing.md  slot_tool.md  utils.md
docs/css/: custom.css
docs/notebooks/: notebook_00_getting_started.ipynb  notebook_01_differential_expression(snapshot_data).ipynb  notebook_01_differential_expression.ipynb  notebook_02_kinetic_modeling(progressive_labeling_time_courses).ipynb  notebook_02_kinetic_modeling.ipynb  notebook_03_loading_data_and_working_with_grandPy_objects.ipynb  notebook_03_loading_data_and_working_with_grandpy_objects.ipynb  notebook_04_working_with_data_matrices_and_analysis_results.ipynb  notebook_05_plotting.ipynb  notebook_06_fitting_pulse-chase_data.ipynb  presentation_notebook.ipynb
grandpy/: __init__.py  analysis_tool.py  core_grandpy.py  diffexp.py  grandPy.py  lfc.py  load.py  modeling.py  plot.py  plot_tool.py  processing.py  slot_tool.py  utils.py
mkdocs_docskimmer/: base.html  logo.html  nav-main.html  searchbox.html
tutorials/: .gitignore
(+72 files in other folders)
