[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "grandpy"
version = "0.1.0"
description = "Modul for kinetic RNA-seq analysis, inspired by grandR."
readme = "README.md"
#license = { file = "LICENSE.md" }
authors = [
  {name = "Marius Preidel"},
  {name = "Katharina Steinkirchner"},
  {name = "Andreas Weiß"},
  {name = "Finn Möller"},
]
maintainers = [
  {name = "Florian Erhard"}
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "anndata",
    "tqdm",
    "matplotlib",
    "seaborn",
    "pydeseq2"
]

requires-python = ">= 3.13.0"
keywords = ["grandpy", "Grandpy", "GrandPy", "GrandPy", "RNA", "grandR"]

#TODO Insert right URLs
#[project.urls]
#Homepage = "beispiel.com"
#Repository = "beispiel.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["grandpy*"]
exclude = ["test*", "data*", "test-datasets*"]