[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "grandpy"
version = "0.1.0"
description = "Modul for kinetic RNA-seq analysis."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
  {name = "Finn Möller"},
  {name = "Katharina Steinkirchner"},
  {name = "Marius Preidel"},
  {name = "Andreas Weiß"},
]
maintainers = [
  {name = "Florian Erhard"}
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "anndata",
    "tqdm",
    "matplotlib",
    "seaborn",
    "pydeseq2"
]

requires-python = ">= 3.12.0" # TODO noch version hinzufügen
keywords = ["grandpy", "Grandpy", "GrandPy", "GrandPy", "RNA", "grandR"]

#TODO Insert right URLs
#[project.urls]
#Homepage = "beispiel.com"
#Repository = "beispiel.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["grandpy*"]
exclude = ["test*", "data*", "test-datasets*"]